--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h3>Nuestro Blog</h3>
             <article class="entrada">
                 <div class="entrada_imagen">
-                    <img src="img/blog1.jpg" alt="imagen blog">
+                    <img loading="lazy" src="img/blog1.jpg" alt="imagen blog">
                 </div>
                 <div class="entrada_contenido">
                     <h4 class="no-margin"> Tipos de grano</h4>
@@ -51,7 +51,7 @@
 
             <article class="entrada">
                 <div class="entrada_imagen">
-                    <img src="img/blog2.jpg" alt="imagen blog">
+                    <img loading="lazy" src="img/blog2.jpg" alt="imagen blog">
                 </div>
                 <div class="entrada_contenido">
                     <h4 class="no-margin"> 3 Deliciosas Recetas de Cafe</h4>
@@ -65,7 +65,7 @@
 
             <article class="entrada">
                 <div class="entrada_imagen">
-                    <img src="img/blog3.jpg" alt="imagen blog">
+                    <img loading="lazy" src="img/blog3.jpg" alt="imagen blog">
                 </div>
                 <div class="entrada_contenido">
                     <h4 class="no-margin"> Beneficios del Cafe</h4>
